# webcam

./: .gitignore  LICENSE  README.md
.github/workflows/: build-and-release.yml
android/: gradlew  gradlew.bat  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/webcam/phone/: ControlServer.kt  MainActivity.kt  UdpStreamer.kt  VideoEncoder.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
docs/: architecture.md  protocol.md  setup-android.md  setup-windows.md
windows/: CMakeLists.txt
windows/src/: main.cpp
